--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.1",
+        "php": "^7.1|^8.1",
         "psr/log": "^1.1"
     },
     "autoload": {
